<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_casa"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/numeroAleatorio"
            android:icon="@drawable/ic_menu_numaleatorio"
            android:title="@string/menu_numAleatorio" />
        <item
            android:id="@+id/generadorPasswords"
            android:icon="@drawable/ic_menu_passwords"
            android:title="@string/generador_passwords" />
        <item
            android:id="@+id/calculadoraEdad"
            android:icon="@drawable/ic_menu_edad"
            android:title="@string/calculadora_edad" />
        <item
            android:id="@+id/calculadoraDescuentos"
            android:icon="@drawable/ic_menu_calculadora_descuentospng"
            android:title="@string/calculadora_de_descuentos" />
    </group>
</menu>