<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AyudaActivity"
    android:background="@drawable/fondo">

    <FrameLayout
        android:id="@+id/ayudaContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="101dp" >
    </FrameLayout>

    <TextView
        android:id="@+id/textoPantallaDeAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/seccion_de_ayuda"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/texto2PantallaDeAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/texto_ayuda2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204"
        tools:ignore="MissingConstraints,VisualLintLongText" />

    <Button
        android:id="@+id/btnAyuda1"
        android:layout_width="265dp"
        android:layout_height="51dp"
        android:layout_weight="1"
        android:background="@drawable/estilo_boton"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/como_usar_el_generador_de_numeros_aleatorios"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Button
        android:id="@+id/btnAyuda2"
        android:layout_width="265dp"
        android:layout_height="51dp"
        android:layout_weight="1"
        android:background="@drawable/estilo_boton"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/como_usar_la_claculadora_de_edad"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnAyuda3"
        android:layout_width="265dp"
        android:layout_height="51dp"
        android:layout_weight="1"
        android:background="@drawable/estilo_boton"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/como_usar_el_generador_de_contrasenias"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Button
        android:id="@+id/btnAyuda4"
        android:layout_width="265dp"
        android:layout_height="51dp"
        android:layout_weight="1"
        android:background="@drawable/estilo_boton"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/como_usar_la_calculadora_de_descuentos"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="169dp"
        android:layout_height="56dp"
        android:layout_weight="1"
        android:background="@drawable/estilo_boton"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/volver_menu"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947"
        tools:ignore="TextSizeCheck" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="97dp"
        android:layout_height="104dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animacion_ayuda"
        tools:ignore="ImageContrastCheck" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="97dp"
        android:layout_height="104dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animacion_ayuda" />
</androidx.constraintlayout.widget.ConstraintLayout>
